# routes/index.js
@@ -4,6 +4,8 @@ router.get ('/', (req, res) => {
     res.send('Te manda saludos el chancho peludo.');
 });
 
-router.use('/Dogs', require('./dogs'));
+router.use('/dogs', require('./dogs'));
+router.use('/cats', require('./cats'));
+
 
 module.exports = router;
